update every library in the whole project except gson- fix network adapter issues with ipv6 causing slow zookeeper performance