@@ -34,27 +34,23 @@
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <logback.version>1.2.6</logback.version>
         <commonos_lang.version>3.12.0</commonos_lang.version>
-        <trove4j.version>3.0.3</trove4j.version>
         <guava.version>33.3.1-jre</guava.version>
-        <junit.version>5.8.2</junit.version>
-        <jupiter.version>5.3.0</jupiter.version>
-        <surefire.version>1.3.2</surefire.version>
-        <vintage.version>5.8.2</vintage.version>
-        <tuweni.verison>2.2.0</tuweni.verison>
-        <jmh.version>1.34</jmh.version>
-        <awaitutility.version>4.2.0</awaitutility.version>
-        <lombok.version>1.18.32</lombok.version>
+        <jupiter.version>5.11.3</jupiter.version>
+        <tuweni.verison>2.4.2</tuweni.verison>
+        <jmh.version>1.37</jmh.version>
+        <awaitutility.version>4.2.2</awaitutility.version>
+        <lombok.version>1.18.36</lombok.version>
         <activej.version>6.0-beta2</activej.version>
-        <commons_net.version>3.9.0</commons_net.version>
-        <logback.version>1.4.14</logback.version>
+        <commons_net.version>3.11.1</commons_net.version>
         <compress.version>1.27.1</compress.version>
-        <fury_core.version>0.8.0</fury_core.version>
-        <fastjson2.version>2.0.45</fastjson2.version>
+        <fury_core.version>0.9.0</fury_core.version>
+        <fastjson2.version>2.0.53</fastjson2.version>
         <lz4.version>1.8.0</lz4.version>
         <asm.version>9.7.1</asm.version>
         <comons_collections4.version>4.5.0-M2</comons_collections4.version>
+        <logback.version>1.5.12</logback.version>
+        <slf4j.version>2.0.16</slf4j.version>
     </properties>
     <repositories>
         <repository>
@@ -112,6 +108,21 @@
     </distributionManagement>
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
             <version>${asm.version}</version>
@@ -137,11 +148,6 @@
             <version>${compress.version}</version>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.lz4</groupId>
             <artifactId>lz4-java</artifactId>
             <version>${lz4.version}</version>
@@ -163,13 +169,15 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.version}</version>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${jupiter.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${jupiter.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -182,13 +190,8 @@
             <version>${guava.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.tuweni</groupId>
+            <groupId>io.tmio</groupId>
             <artifactId>tuweni-bytes</artifactId>
-            <version>${tuweni.verison}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tuweni</groupId>
-            <artifactId>tuweni-units</artifactId>
             <version>${tuweni.verison}</version>
         </dependency>
         <dependency>
@@ -225,7 +228,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.5.0</version>
+                    <version>3.5.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -280,6 +283,21 @@
             </plugins>
         </pluginManagement>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <threadCount>1</threadCount>
+                    <reuseForks>false</reuseForks>
+                    <runOrder>alphabetical</runOrder>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.math=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
